comment the app settings

--- a/VpnStatus/App.config
+++ b/VpnStatus/App.config
@@ -4,7 +4,10 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <appSettings>
+    <!-- the name of your VPN connection in Control Panel's Network Connections -->
     <add key="VpnName" value="your.vpn.url.com" />
+
+    <!-- how often to query network connections to check vpn status -->
     <add key="IntervalToPollMs" value="3000" />
   </appSettings>
 </configuration>
