--- a/VpnStatus/App.config
+++ b/VpnStatus/App.config
@@ -5,7 +5,7 @@
   </startup>
   <appSettings>
     <!-- the name of your VPN connection in Control Panel's Network Connections -->
-    <add key="VpnName" value="your.vpn.url.com" />
+    <add key="VpnName" value="your.vpn.name" />
 
     <!-- how often to query network connections to check vpn status -->
     <add key="IntervalToPollMs" value="3000" />
